--- a/test/Base.lproj/LaunchScreen.storyboard
+++ b/test/Base.lproj/LaunchScreen.storyboard
@@ -18,19 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Loading Recipes and Helpful Tips..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DwB-Rf-e9t">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading Recipes..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DwB-Rf-e9t">
                                 <rect key="frame" x="56" y="428" width="303" height="40"/>
-                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="18"/>
+                                <fontDescription key="fontDescription" name="Optima-Regular" family="Optima" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="0.82745098039999998" green="0.93725490199999995" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="DwB-Rf-e9t" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="98" id="36H-HD-Fxp"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DwB-Rf-e9t" secondAttribute="bottom" constant="403" id="Epq-MW-Zst"/>
-                            <constraint firstItem="DwB-Rf-e9t" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="394" id="cXI-7L-JHm"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DwB-Rf-e9t" secondAttribute="trailing" constant="98" id="zM5-6u-azq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DwB-Rf-e9t" secondAttribute="trailing" constant="55" id="6rY-4A-mnC"/>
+                            <constraint firstItem="DwB-Rf-e9t" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="56" id="7hC-Z1-6HX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="DwB-Rf-e9t" secondAttribute="bottom" constant="394" id="bIu-E5-aHw"/>
+                            <constraint firstItem="DwB-Rf-e9t" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="384" id="yxS-xC-efq"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
