saving monday work, pray it works

--- a/test/Base.lproj/Main.storyboard
+++ b/test/Base.lproj/Main.storyboard
@@ -43,6 +43,13 @@
                                     <segue destination="7qN-wh-GLW" kind="show" id="VJy-MT-Hef"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chefHat" translatesAutoresizingMaskIntoConstraints="NO" id="IR8-D6-MMN">
+                                <rect key="frame" x="87" y="69" width="240" height="213"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="5O7-t5-3re"/>
+                                    <constraint firstAttribute="height" constant="213" id="pCR-b7-eXB"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.82373470620945377" green="0.93635832875960046" blue="0.99607843137254903" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -51,13 +58,17 @@
                             <constraint firstItem="buE-fU-huQ" firstAttribute="top" secondItem="VHb-tp-B3L" secondAttribute="bottom" constant="347" id="Ec4-GJ-UAD"/>
                             <constraint firstItem="VBA-d7-uxQ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="319" id="G5Y-Vr-aOP"/>
                             <constraint firstItem="VHb-tp-B3L" firstAttribute="top" secondItem="frY-ur-Loo" secondAttribute="bottom" constant="30" id="IZR-Qk-FCz"/>
+                            <constraint firstItem="IR8-D6-MMN" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="Lf5-iw-dSZ"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="frY-ur-Loo" secondAttribute="trailing" constant="144" id="TlK-dK-Ixa"/>
                             <constraint firstItem="buE-fU-huQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="130" id="Vmo-gW-xGb"/>
+                            <constraint firstItem="VBA-d7-uxQ" firstAttribute="top" secondItem="IR8-D6-MMN" secondAttribute="bottom" constant="81" id="Zgd-Hi-VaP"/>
                             <constraint firstItem="VHb-tp-B3L" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="135" id="dkA-iZ-AiN"/>
                             <constraint firstItem="frY-ur-Loo" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="145" id="hgr-Zk-YIj"/>
+                            <constraint firstItem="IR8-D6-MMN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="k35-ME-dld"/>
                             <constraint firstItem="buE-fU-huQ" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="nRM-el-27x"/>
                             <constraint firstItem="frY-ur-Loo" firstAttribute="top" secondItem="VBA-d7-uxQ" secondAttribute="bottom" constant="12" id="qCX-ib-H1h"/>
                             <constraint firstItem="VBA-d7-uxQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138" id="ugy-HD-WFj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IR8-D6-MMN" secondAttribute="trailing" constant="87" id="w1d-FJ-NNb"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VHb-tp-B3L" secondAttribute="trailing" constant="135" id="zTF-3h-paC"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -144,6 +155,9 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                             </button>
+                                            <connections>
+                                                <segue destination="BYZ-38-t0r" kind="show" id="1ou-mV-4d7"/>
+                                            </connections>
                                         </barButtonItem>
                                     </navigationItem>
                                 </items>
@@ -221,13 +235,17 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Z23-tI-BML" id="HSz-DB-TSb"/>
+                                    <outlet property="delegate" destination="Z23-tI-BML" id="j7h-pd-kN4"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="0.83137254901960789" green="0.93725490196078431" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="S0F-QU-dmd"/>
                     </view>
                     <connections>
-                        <outlet property="listView2" destination="FUA-se-YXV" id="AQu-M4-SZA"/>
+                        <outlet property="tableView" destination="FUA-se-YXV" id="3zJ-KM-UeK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p75-ed-WLB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -277,12 +295,13 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chefHat" width="512" height="512"/>
         <image name="click_to_enable_adobe_flash" width="183" height="275"/>
         <image name="horrible_substitute_for_cereal" width="1200" height="1800"/>
         <image name="launch" width="225" height="225"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="aQI-h6-haD"/>
-        <segue reference="cxN-nF-3gA"/>
+        <segue reference="VJy-MT-Hef"/>
     </inferredMetricsTieBreakers>
 </document>
